<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".Profile.SettingsFragment">


    <LinearLayout
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/settings_phoneEdt_hint"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.button.MaterialButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/setting_save"
        android:layout_gravity="bottom"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/logout"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/SettingsText"
        android:text="@string/settings_logout"
        android:background="@drawable/ripple_shape"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/SettingsText"
        android:text="@string/setting_about"
        android:gravity="center_vertical"/>


</LinearLayout>