<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:layoutDirection="ltr"
    tools:context=".Cinema.CinemaActivity">

    <ScrollView
        android:layout_above="@id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <FrameLayout
                android:id="@+id/viewPagerContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:clipChildren="false">

                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:clipChildren="false" />
            </FrameLayout>


                <android.support.design.button.MaterialButton
                    android:id="@+id/category"
                    android:layout_below="@+id/viewPagerContainer"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_height="80dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:text="@string/cinema_category_btn"
                    app:cornerRadius="30dp" />


                <TextView
                    android:id="@+id/popular_container"
                    android:layout_below="@id/category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="start"
                    android:fontFamily="sans-serif-condensed-medium"

                    android:text="@string/popular_cinema_a"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    android:textStyle="bold" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/popular_movies_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/popular_container"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp">

            </android.support.v7.widget.RecyclerView>


            <RelativeLayout
                android:id="@+id/my_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/popular_movies_recycler_view"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/my_list_cinema_a"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_list_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/my_list_container"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">

            </android.support.v7.widget.RecyclerView>

        </RelativeLayout>
    </ScrollView>

    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/white_grey_border_top"
        app:itemIconTint="@drawable/icon_tint_color"
        app:menu="@menu/bottom_nav_menu" />


</RelativeLayout>